[gd_scene load_steps=5 format=3 uid="uid://cwoaeo88ew2j4"]

[ext_resource type="Texture2D" uid="uid://cgudr5akgaod3" path="res://icon.svg" id="1_8o2a0"]
[ext_resource type="Script" path="res://Scripts/Enemy/Enemy_Type101_Tail.gd" id="2_iifg6"]
[ext_resource type="PackedScene" uid="uid://2ta75336t660" path="res://TSCN/Player/wander.tscn" id="3_7a2qe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_avtoe"]

[node name="Enemy_Type101" type="CharacterBody2D" node_paths=PackedStringArray("move_direction") groups=["Boss_Tail"]]
scale = Vector2(3, 3)
collision_mask = 0
script = ExtResource("2_iifg6")
move_direction = NodePath("Wonder")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_avtoe")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_8o2a0")

[node name="Wonder" parent="." instance=ExtResource("3_7a2qe")]

[node name="BulletSpawner1" type="Marker2D" parent="."]
position = Vector2(-11.3333, -7.66667)

[node name="BulletSpawner2" type="Marker2D" parent="."]
position = Vector2(-11.3333, 4.76837e-07)

[node name="BulletSpawner3" type="Marker2D" parent="."]
position = Vector2(-11.3333, 7.33333)

[node name="BulletSpawner4" type="Marker2D" parent="."]
position = Vector2(-11.3333, 0)

[node name="ShootDirection" type="Marker2D" parent="BulletSpawner4"]
position = Vector2(0, 7.33333)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
